tests/resource/valid/control_flow/handle_in_if.mamba
def f() -> Int raise [Exception] => 10

def x:= if True then
    f() handle
        err: Exception => 3
else
    f() handle
        err: Exception => 3
