tests/resource/invalid/type/function/return_if_else_none_then.mamba
def f() -> Int => if True then None else 10
